--- a/templates/idea-details.html
+++ b/templates/idea-details.html
@@ -3,5 +3,9 @@
 {% block content %}
 
 <h1>{{idea.idea_title}}</h1>
+<p>{{idea.idea_summary}}</p>
+<p>{{idea._id}}</p>
+
+<a href="{{url_for('delete_idea', idea_id=idea._id)}}" class="waves-effect waves-light btn">delete idea</a>
 
 {% endblock %}
