Finish create idea. Clean up comments and old code.

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,8 @@
 
 <body>
   <header>
+    {% block headerbutton %}
+    {% endblock %}
     <nav>
       <div class="nav-wrapper">
         <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
