--- a/templates/ideas.html
+++ b/templates/ideas.html
@@ -1,4 +1,9 @@
 {% extends 'base.html' %}
+
+{% block headerbutton %}
+<a href="{{url_for('addidea')}}" class="waves-effect waves-light btn">add idea</a>
+{% endblock %}
+
 {% block content %}
 <h1>Ideas</h1>
 <a href="{{url_for('addidea')}}" class="waves-effect waves-light btn">add idea</a>
