--- a/templates/idea-details.html
+++ b/templates/idea-details.html
@@ -6,6 +6,7 @@
 <p>{{idea.idea_summary}}</p>
 <p>{{idea._id}}</p>
 
+<a href="{{url_for('edit_idea', idea_id=idea._id)}}" class="waves-effect waves-light btn">edit idea</a>
 <a href="{{url_for('delete_idea', idea_id=idea._id)}}" class="waves-effect waves-light btn">delete idea</a>
 
 {% endblock %}
