Reorganize file structure. Create nav for logged in and out users.

--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -7,6 +7,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
   <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}" type="text/css" />
   <link rel="stylesheet" href="{{url_for('static', filename='css/override.css')}}" type="text/css" />
+  <link rel="icon" href="{{ url_for('static', filename='favicon1.ico') }}" type="image/x-icon" />
 
   {% if title %}
   <title>Rate it - {{ title }}</title>
@@ -19,26 +20,8 @@
   <header>
     {% block headerbutton %}
     {% endblock %}
-    <nav>
-      <div class="nav-wrapper">
-        <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-        <ul id="nav-mobile" class="right hide-on-med-and-down">
-          <li><a href="{{url_for('home')}}">Home</a></li>
-          <li><a href="{{url_for('ideas')}}">Ideas</a></li>
-          <li><a href="{{url_for('problems')}}">Problems</a></li>
-          <li><a href="{{url_for('register')}}">Register</a></li>
-          <li><a href="{{url_for('login')}}">Log in</a></li>
-        </ul>
-      </div>
-    </nav>
+    {% include 'layouts/navigation.html' %}
 
-    <ul class="sidenav" id="mobile-demo">
-      <li><a href="{{url_for('home')}}">Home</a></li>
-      <li><a href="{{url_for('ideas')}}">Ideas</a></li>
-      <li><a href="{{url_for('problems')}}">Problems</a></li>
-      <li><a href="{{url_for('register')}}">Register</a></li>
-      <li><a href="{{url_for('login')}}">Log in</a></li>
-    </ul>
 
   </header>
   <div class="container">
@@ -54,7 +37,7 @@
     {% block content %}
     {% endblock %}
   </div>
-
+  {% include 'layouts/footer.html' %}
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <script type="text/javascript">
