--- a/templates/pages/ideas.html
+++ b/templates/pages/ideas.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'layouts/base.html' %}
 
 {% block headerbutton %}
 <a href="{{url_for('addidea')}}" class="waves-effect waves-light btn">add idea</a>
