--- a/templates/pages/addidea.html
+++ b/templates/pages/addidea.html
@@ -1,14 +1,14 @@
-{% extends 'base.html' %}
+{% extends 'layouts/base.html' %}
 
 {% block content %}
-<h1>Edit idea</h1>
+<h1>Add idea</h1>
 <div class="row">
-    <form action="{{ url_for('update_idea', idea_id=idea._id) }}" method="POST" class="col s12">
+    <form action="{{ url_for('insert_idea') }}" method="POST" class="col s12">
         <div class="row">
             <div class="row">
                 <div class="input-field col s12">
                     <i class="material-icons prefix">assignment</i>
-                    <input id="idea_title" name="idea_title" type="text" value="{{idea.idea_title}}" />
+                    <input id="idea_title" name="idea_title" type="text" />
                     <label for="icon_prefix">Idea Name</label>
                 </div>
             </div>
@@ -17,8 +17,7 @@
         <div class="row">
             <div class="input-field col s12">
                 <i class="material-icons prefix">subject</i>
-                <textarea name="idea_summary" id="idea_summary"
-                    class="materialize-textarea">{{idea.idea_summary}}</textarea>
+                <textarea name="idea_summary" id="idea_summary" class="materialize-textarea"></textarea>
                 <label for="icon_telephone">Task Description</label>
             </div>
         </div>
@@ -26,10 +25,9 @@
 
         <div class="row">
             <button class="btn waves-effect waves-light" type="submit" name="action">
-                Update Idea
+                Add Idea
                 <i class="material-icons right">playlist_add</i>
             </button>
-            <a href="{{url_for('idea_details', idea_id=idea._id)}}" class="waves-effect waves-light btn">cancel</a>
         </div>
     </form>
 </div>
