--- a/templates/pages/register.html
+++ b/templates/pages/register.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} {% block content %}
+{% extends "layouts/base.html" %} {% block content %}
 <div class="content-section">
   <form method="POST" action="">
     {{ form.hidden_tag() }}
