--- a/templates/layouts/navigation.html
+++ b/templates/layouts/navigation.html
@@ -7,7 +7,7 @@
             <li><a href="{{url_for('ideas')}}">Ideas</a></li>
             <li><a href="{{url_for('problems')}}">Problems</a></li>
             {% if 'username' in session %}
-            <li><a href="#">{{session["username"]}}</a></li>
+            <li><a href="{{url_for('account')}}">{{session["username"]}}</a></li>
             <li><a class="nav-link" href="{{url_for('logout')}}">Log Out</a></li>
             {% endif %}
             {% if not 'username' in session %}
@@ -23,7 +23,8 @@
     <li><a href="{{url_for('ideas')}}">Ideas</a></li>
     <li><a href="{{url_for('problems')}}">Problems</a></li>
     {% if 'username' in session %}
-    <li><a href="#">{{session["username"]}}</a></li>
+    <li><a href="{{url_for('account')}}">{{session["username"]}}</a></li>
+    <li><a class="nav-link" href="{{url_for('logout')}}">Log Out</a></li>
     {% endif %}
     {% if not 'username' in session %}
     <li><a href="{{url_for('register')}}">Register</a></li>
