--- a/templates/pages/idea-details.html
+++ b/templates/pages/idea-details.html
@@ -4,7 +4,7 @@
 
 <h1>{{idea.idea_title}}</h1>
 <p>{{idea.idea_summary}}</p>
-<p>{{idea._id}}</p>
+<p>{{idea.category_name}}</p>
 
 <a href="{{url_for('edit_idea', idea_id=idea._id)}}" class="waves-effect waves-light btn">edit idea</a>
 <a href="{{url_for('delete_idea', idea_id=idea._id)}}" class="waves-effect waves-light btn">delete idea</a>
