--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -43,6 +43,7 @@
   <script type="text/javascript">
     $(document).ready(function () {
       $('.sidenav').sidenav();
+      $('select').formSelect();
     });
   </script>
 
