--- a/templates/pages/editidea.html
+++ b/templates/pages/editidea.html
@@ -12,8 +12,24 @@
                     <label for="icon_prefix">Idea Name</label>
                 </div>
             </div>
-
         </div>
+
+        <div class="row">
+            <div class="input-field col s12">
+                <i class="material-icons prefix">poll</i>
+                <select id="category" name="category_name">
+                    <option value="" disabled selected>Choose Category</option>
+                    {% for cat in categories %} {% if cat.category_name ==
+                idea.category_name%}
+                    <option value="{{cat.category_name}}" selected>{{cat.category_name}}</option>
+                    {% else %}
+                    <option value="{{cat.category_name}}">{{cat.category_name}}</option>
+                    {% endif %} {% endfor %}
+                </select>
+                <label>Select a category</label>
+            </div>
+        </div>
+
         <div class="row">
             <div class="input-field col s12">
                 <i class="material-icons prefix">subject</i>
