--- a/templates/pages/ideas.html
+++ b/templates/pages/ideas.html
@@ -12,7 +12,7 @@
 <a href="{{url_for('idea_details', idea_id=idea._id)}}">
   <h3>{{idea.idea_title}}</h3>
   <p>{{idea.idea_summary}}</p>
-  <p>{{idea._id}}</>
+  <p>{{idea.category_name}}</p>
 </a>
 
 {% endfor %}
