Reorganize html pages. Add admin link to admin account page.

--- a/templates/pages/users/account.html
+++ b/templates/pages/users/account.html
@@ -8,6 +8,10 @@
 <br>
 <p>Problems</p>
 
+{% if session["username"] == "Master" %}
 
+<a href="{{url_for('admin')}}">Admin</a>
+
+{% endif %}
 
 {% endblock %}
