--- a/static/css/override.css
+++ b/static/css/override.css
@@ -1,3 +1,9 @@
 /* nav ul a {
     color: black;
 } */
+
+.my-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-gap: 1rem;
+}
