--- a/templates/pages/ideas/ideas.html
+++ b/templates/pages/ideas/ideas.html
@@ -8,14 +8,31 @@
 <h1>Ideas</h1>
 <a href="{{url_for('addidea')}}" class="waves-effect waves-light btn">add idea</a>
 
-{% for idea in ideas %}
-<a href="{{url_for('idea_details', idea_id=idea._id)}}">
-  <h3>{{idea.idea_title}}</h3>
-  <p>{{idea.idea_summary}}</p>
-  <p>{{idea.category_name}}</p>
-</a>
 
-{% endfor %}
+
+
+<div class="row my-grid">
+  {% for idea in ideas %}
+  <div class="card activator">
+    <div class="card-image waves-effect waves-block waves-light">
+      <!-- <img class="activator" src="images/office.jpg"> -->
+    </div>
+    <div class="card-content activator">
+      <span class="card-title grey-text text-darken-4"><i class="material-icons right"></i>
+
+        <h3 class="activator">{{idea.idea_title}}</h3>
+
+        <h4 class="activator">{{idea.category_name}}</h4>
+      </span>
+    </div>
+    <div class="card-reveal">
+      <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
+      <p>{{idea.idea_summary}}</p>
+      <p><a href="{{url_for('idea_details', idea_id=idea._id)}}">view details</a></p>
+    </div>
+  </div>
+  {% endfor %}
+</div>
 
 
 
