--- a/templates/pages/ideas/add_idea.html
+++ b/templates/pages/ideas/add_idea.html
@@ -1,11 +1,22 @@
 {% extends 'layouts/base.html' %}
 
 {% block content %}
-
 <h1>Add idea</h1>
 <div class="row">
     <form action="{{ url_for('insert_idea') }}" method="POST" class="col s12">
+
+        <!-- Set username -->
         <div class="row">
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="material-icons prefix">assignment</i>
+                    <input id="users" name="username" value="{{session["username"]}}" disabled selected />
+                </div>
+            </div>
+        </div>
+
+        <!-- Set idea name -->
+        <div class=" row">
             <div class="row">
                 <div class="input-field col s12">
                     <i class="material-icons prefix">assignment</i>
@@ -15,6 +26,7 @@
             </div>
         </div>
 
+        <!-- Set category -->
         <div class="row">
             <div class="row">
                 <div class="input-field col s12">
@@ -30,6 +42,7 @@
             </div>
         </div>
 
+        <!-- Set short description -->
         <div class="row">
             <div class="input-field col s12">
                 <i class="material-icons prefix">subject</i>
@@ -38,6 +51,14 @@
             </div>
         </div>
 
+        <!-- Set details -->
+        <div class="row">
+            <div class="input-field col s12">
+                <i class="material-icons prefix">subject</i>
+                <textarea name="idea_details" id="idea_details" class="materialize-textarea"></textarea>
+                <label for="icon_telephone">Idea Details</label>
+            </div>
+        </div>
 
         <div class="row">
             <button class="btn waves-effect waves-light" type="submit" name="action">
