--- a/templates/pages/ideas/idea_details.html
+++ b/templates/pages/ideas/idea_details.html
@@ -3,8 +3,11 @@
 {% block content %}
 
 <h1>{{idea.idea_title}}</h1>
+<p>{{idea.username}}</p>
 <p>{{idea.idea_summary}}</p>
 <p>{{idea.category_name}}</p>
+<p>{{idea.idea_username}}</p>
+<p>{{users.username}}</p>
 
 <a href="{{url_for('edit_idea', idea_id=idea._id)}}" class="waves-effect waves-light btn">edit idea</a>
 <a href="{{url_for('delete_idea', idea_id=idea._id)}}" class="waves-effect waves-light btn">delete idea</a>
