--- a/templates/pages/ideas/idea_details.html
+++ b/templates/pages/ideas/idea_details.html
@@ -8,8 +8,10 @@
 <p>{{idea.category_name}}</p>
 
 
-
+{% if idea.username == session["username"] %}
 <a href="{{url_for('edit_idea', idea_id=idea._id)}}" class="waves-effect waves-light btn">edit idea</a>
 <a href="{{url_for('delete_idea', idea_id=idea._id)}}" class="waves-effect waves-light btn">delete idea</a>
+{% endif %}
+
 
 {% endblock %}
