Finish edit and update with username. Limit chars in input.

--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -44,6 +44,7 @@
     $(document).ready(function () {
       $('.sidenav').sidenav();
       $('select').formSelect();
+      $('input#input_text, textarea#textarea1, textarea#textarea2, textarea#textarea3').characterCounter();
     });
   </script>
 
