--- a/templates/pages/ideas/idea_details.html
+++ b/templates/pages/ideas/idea_details.html
@@ -6,7 +6,7 @@
 <p>Submitted by: {{idea.username}}</p>
 <p>{{idea.idea_summary}}</p>
 <p>{{idea.category_name}}</p>
-
+<p>{{idea.idea_details}}</p>
 
 {% if idea.username == session["username"] %}
 <a href="{{url_for('edit_idea', idea_id=idea._id)}}" class="waves-effect waves-light btn">edit idea</a>
