Add tags for admin. Set autofocus on first form field.

--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -45,6 +45,8 @@
       $('.sidenav').sidenav();
       $('select').formSelect();
       $('input#input_text, textarea#textarea1, textarea#textarea2, textarea#textarea3').characterCounter();
+      $('form:first *:input[type!=hidden]:first').focus();
+
     });
   </script>
 
