--- a/static/css/override.css
+++ b/static/css/override.css
@@ -7,3 +7,7 @@
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     grid-gap: 1rem;
 }
+
+.set-color {
+    background-color: gainsboro;
+}
