--- a/templates/pages/ideas/ideas.html
+++ b/templates/pages/ideas/ideas.html
@@ -8,7 +8,14 @@
 <h1>Ideas</h1>
 <a href="{{url_for('addidea')}}" class="waves-effect waves-light btn">add idea</a>
 
-
+<h3>Search ideas</h3>
+<form>
+  <div class="input-field z-depth-1">
+    <input id="search" type="search" required>
+    <label class="label-icon" for="search"><i class="material-icons">search</i></label>
+    <i class="material-icons">close</i>
+  </div>
+</form>
 
 
 <div class="row my-grid">
