--- a/templates/pages/categories/admin.html
+++ b/templates/pages/categories/admin.html
@@ -2,43 +2,62 @@
 
 {% block content %}
 <h1>Admin functionalities</h1>
-<div class="row">
-    <h3>Categories</h3>
-    <ul>
-        {% for category in categories %}
-        <li>
-            <div class="collapsible-header">
-                <a href="{{url_for('delete_category', category_id=category._id)}}"
-                    class="waves-effect waves-light btn btn_small">Del</a>
-                <a href="{{url_for('edit_category', category_id=category._id)}}"
-                    class="waves-effect waves-light btn btn_small blue">Edit</a>
+<div class="row my-grid-2">
+    <div class="column-1">
+        <div class="row">
+            <h3>Categories</h3>
+            <ul>
+                {% for category in categories %}
+                <li>
+                    <div class="collapsible-header">
+                        <a href="{{url_for('delete_category', category_id=category._id)}}"
+                            class="waves-effect waves-light btn btn_small">Del</a>
+                        <a href="{{url_for('edit_category', category_id=category._id)}}"
+                            class="waves-effect waves-light btn btn_small blue">Edit</a>
 
-                <div class="task_header">
-                    <strong>{{category.category_name}}</strong>
-                </div>
+                        <div class="task_header">
+                            <strong>{{category.category_name}}</strong>
+                        </div>
+                    </div>
+                </li>
+                {% endfor %}
+            </ul>
+            <div class="row">
+                <a href="{{url_for('add_category')}}" class="waves-effect waves-light btn">
+                    <i class="material-icons right">playlist_add</i>Add Category
+                </a>
             </div>
-        </li>
-        {% endfor %}
-    </ul>
-</div>
-<div class="row">
-    <a href="{{url_for('add_category')}}" class="waves-effect waves-light btn">
-        <i class="material-icons right">playlist_add</i>Add Category
-    </a>
+        </div>
+    </div>
+    <div class="column-2">
+        <div class="row">
+            <h3>Tags</h3>
+            <ul>
+                {% for tag in tags %}
+                <li>
+                    <div class="collapsible-header">
+                        <a href="{{url_for('delete_tag', tag_id=tag._id)}}"
+                            class="waves-effect waves-light btn btn_small">Del</a>
+                        <a href="{{url_for('edit_tag', tag_id=tag._id)}}"
+                            class="waves-effect waves-light btn btn_small blue">Edit</a>
+                        <div class="task_header">
+                            <strong>{{tag.tag_name}}</strong>
+                        </div>
+                    </div>
+                </li>
+                {% endfor %}
+            </ul>
+            <div class="row">
+                <a href="{{url_for('add_tag')}}" class="waves-effect waves-light btn">
+                    <i class="material-icons right">playlist_add</i>Add Tag
+                </a>
+            </div>
+        </div>
+    </div>
 </div>
 
-<div class="row">
-    <h3>Tags</h3>
-    {% for tag in tags %}
-    <div class="chip">
-        {{tag.tag_name}}
-    </div>
-    {% endfor %}
-</div>
-<div class="row">
-    <a href="{{url_for('add_tag')}}" class="waves-effect waves-light btn">
-        <i class="material-icons right">playlist_add</i>Add Tag
-    </a>
-</div>
+
+
+
 
 {% endblock %}
