Edit and update idea tag to MongoDB.

--- a/templates/pages/ideas/add_idea.html
+++ b/templates/pages/ideas/add_idea.html
@@ -64,7 +64,7 @@
                         <option value="{{tag.tag_name}}">{{tag.tag_name}}</option>
                         {% endfor %}
                     </select>
-                    <label>Select a category for your idea</label>
+                    <label>Select a tag for your idea</label>
                 </div>
             </div>
         </div>
