--- a/templates/pages/ideas/edit_idea.html
+++ b/templates/pages/ideas/edit_idea.html
@@ -76,21 +76,18 @@
 
         <!-- Fixed username -->
         <div class="row">
-            <div class="input-field col s12">
-                <i class="material-icons prefix">subject</i>
-                <textarea name="username" id="idea_author" class="materialize-textarea"
-                    readonly>{{session["username"]}}</textarea>
-                <label for="icon_telephone">Idea owner</label>
-            </div>
+            <input type="hidden" name="username" id="idea_author" class="materialize-textarea"
+                value="{{session['username']}}">
         </div>
+</div>
 
-        <div class="row">
-            <button class="btn waves-effect waves-light" type="submit" name="action">
-                Update Idea
-                <i class="material-icons right">playlist_add</i>
-            </button>
-            <a href="{{url_for('idea_details', idea_id=idea._id)}}" class="waves-effect waves-light btn">cancel</a>
-        </div>
-    </form>
+<div class="row">
+    <button class="btn waves-effect waves-light" type="submit" name="action">
+        Update Idea
+        <i class="material-icons right">playlist_add</i>
+    </button>
+    <a href="{{url_for('idea_details', idea_id=idea._id)}}" class="waves-effect waves-light btn">cancel</a>
+</div>
+</form>
 </div>
 {% endblock %}
