--- a/templates/pages/ideas/idea_details.html
+++ b/templates/pages/ideas/idea_details.html
@@ -7,12 +7,23 @@
 <p>{{idea.idea_summary}}</p>
 <p>{{idea.category_name}}</p>
 <p>{{idea.idea_details}}</p>
-<p>{{idea.idea_tags}}</p>
+<div class="chip">
+    {{idea.idea_tag1}}
+</div>
+<div class="chip">
+    {{idea.idea_tag2}}
+</div>
+<div class="chip">
+    {{idea.idea_tag3}}
+</div>
 
-{% if idea.username == session["username"] %}
-<a href="{{url_for('edit_idea', idea_id=idea._id)}}" class="waves-effect waves-light btn">edit idea</a>
-<a href="{{url_for('delete_idea', idea_id=idea._id)}}" class="waves-effect waves-light btn">delete idea</a>
-{% endif %}
+<div>
+    {% if idea.username == session["username"] %}
+    <a href="{{url_for('edit_idea', idea_id=idea._id)}}" class="waves-effect waves-light btn">edit idea</a>
+    <a href="{{url_for('delete_idea', idea_id=idea._id)}}" class="waves-effect waves-light btn">delete idea</a>
+    {% endif %}
+</div>
+
 
 
 {% endblock %}
