--- a/templates/pages/ideas/idea_details.html
+++ b/templates/pages/ideas/idea_details.html
@@ -18,7 +18,7 @@
 </div>
 
 <div>
-    {% if idea.username == session["username"] %}
+    {% if (idea.username == session["username"]) or (session["username"] == "Master") %}
     <a href="{{url_for('edit_idea', idea_id=idea._id)}}" class="waves-effect waves-light btn">edit idea</a>
     <a href="{{url_for('delete_idea', idea_id=idea._id)}}" class="waves-effect waves-light btn">delete idea</a>
     {% endif %}
