--- a/templates/pages/ideas/add_idea.html
+++ b/templates/pages/ideas/add_idea.html
@@ -103,6 +103,13 @@
                 value="{{session['username']}}">
         </div>
 
+        <!-- Fixed vote id -->
+        <div class="row">
+            <input type="hidden" name="username" id="idea_author" class="materialize-textarea"
+                value="{{session['username']}}">
+        </div>
+
+
         <div class="row">
             <button class="btn waves-effect waves-light" type="submit" name="action">
                 Add Idea
