--- a/templates/pages/ideas/idea_details.html
+++ b/templates/pages/ideas/idea_details.html
@@ -19,6 +19,26 @@
     {{idea.idea_tag3}}
 </div>
 
+<form action="{{ url_for('upvote') }}" method="POST">
+    <input type="hidden" name="idea_title" id="idea_author" class="materialize-textarea" value="{{idea.idea_title}}">
+    <input type="hidden" name="username" id="idea_author" class="materialize-textarea" value="{{session['username']}}">
+    <div class="row">
+        <button class="btn waves-effect waves-light" type="submit" name="action">
+            Like this idea!
+
+        </button>
+
+    </div>
+
+</form>
+
+<!-- <a href="{{url_for('idea_details', idea_id=idea._id)}}" class="waves-effect waves-light btn">like this
+    idea</a> -->
+
+<div class="likes">
+    <a href="#"><img src="/static/images/thumb_up-black-18dp.svg" alt="thumb up"></a>
+    <p>Number of likes:</p>
+</div>
 
 <div>
     {% if (idea.username == session["username"]) or (session["username"] == "Master") %}
