Try to make vote dependent on if voted. Need to work with cursor. Probably too complex, so need to rethink.

--- a/templates/pages/ideas/idea_details.html
+++ b/templates/pages/ideas/idea_details.html
@@ -31,9 +31,9 @@
     </div>
 
 </form>
+<p>Voted users:</p>
 
-<!-- <a href="{{url_for('idea_details', idea_id=idea._id)}}" class="waves-effect waves-light btn">like this
-    idea</a> -->
+
 
 <div class="likes">
     <a href="#"><img src="/static/images/thumb_up-black-18dp.svg" alt="thumb up"></a>
