--- a/templates/pages/ideas/add_idea.html
+++ b/templates/pages/ideas/add_idea.html
@@ -111,7 +111,7 @@
 
 
         <div class="row">
-            <button class="btn waves-effect waves-light" type="submit" name="action">
+            <button class="btn waves-effect waves-light" type="submit">
                 Add Idea
                 <i class="material-icons right">playlist_add</i>
             </button>
