Change vote system to embedded list in idea collection. Works perfectly except for edit and update. This overwrites all.

--- a/templates/pages/ideas/add_idea.html
+++ b/templates/pages/ideas/add_idea.html
@@ -97,6 +97,10 @@
             </div>
         </div>
 
+        <!-- Set total votes to 0-->
+        <!-- <input type="hidden" name="total_votes" id="votes" class="materialize-textarea" value=> -->
+
+
         <!-- Fixed username -->
         <div class="row">
             <input type="hidden" name="username" id="idea_author" class="materialize-textarea"
@@ -108,6 +112,7 @@
             <input type="hidden" name="username" id="idea_author" class="materialize-textarea"
                 value="{{session['username']}}">
         </div>
+
 
 
         <div class="row">
