--- a/templates/pages/ideas/edit_idea.html
+++ b/templates/pages/ideas/edit_idea.html
@@ -114,6 +114,12 @@
             <input type="hidden" name="username" id="idea_author" class="materialize-textarea"
                 value="{{session['username']}}">
         </div>
+        <!-- Fixed total votes -->
+        <div class="row">
+            <input type="hidden" name="total_votes" id="total_votes" class="materialize-textarea"
+                value="{{total_votes}}">
+        </div>
+
 </div>
 
 <div class="row">
