--- a/templates/pages/ideas/ideas.html
+++ b/templates/pages/ideas/ideas.html
@@ -30,6 +30,7 @@
         <h5 class="activator">{{idea.idea_title}}</h5>
 
         <h6 class="activator">{{idea.category_name}}</h6>
+        <h6 class="activator"><img src="/static/images/thumb_up-black-18dp.svg" alt="thumb up">{{idea.total_votes}}</h6>
       </span>
     </div>
     <div class="card-reveal">
