--- a/templates/pages/ideas/idea_details.html
+++ b/templates/pages/ideas/idea_details.html
@@ -19,21 +19,20 @@
     {{idea.idea_tag3}}
 </div>
 
+
+
+
+
 <form action="{{ url_for('upvote_idea', idea_id=idea._id) }}" method="POST">
-    <!-- <input type="hidden" name="idea_title" id="idea_author" class="materialize-textarea" value="{{idea.idea_title}}"> -->
     <input type="hidden" name="username" id="idea_author" class="materialize-textarea" value="{{session['username']}}">
     <div class="row">
         <button class="btn waves-effect waves-light" type="submit" name="action">
             Like this idea!
 
         </button>
-
     </div>
 
 </form>
-<p>Voted users:{{idea.user_votes}}</p>
-
-
 
 <div class="likes">
     <a href="#"><img src="/static/images/thumb_up-black-18dp.svg" alt="thumb up"></a>
@@ -50,6 +49,16 @@
     {% endif %}
 </div>
 
-
+<p>Voted users:{{idea.user_votes}}</p>
+{% set ns = namespace(found=false) %}
+{% for user_vote in idea.user_votes %}
+    {% if session["username"] == user_vote %}
+    {% set cannotVoteAgain=true %}
+    {% set ns.found = true %}
+    {% endif %}
+{{cannotVoteAgain}}
+{% endfor %}
+{{ns.found}}
+<h5>session["username"] == {{session["username"]}}</h5>
 
 {% endblock %}
