--- a/templates/pages/ideas/idea_details.html
+++ b/templates/pages/ideas/idea_details.html
@@ -51,10 +51,19 @@
 {% endfor %}
 {{ns.found}}
 {% if ns.found == true %}
-Hide button
+<form action="{{ url_for('downvote_idea', idea_id=idea._id) }}" method="POST">
+    
+    <div class="row">
+        <button class="btn waves-effect waves-light" type="submit" name="action">
+            Remove my vote
+
+        </button>
+    </div>
+
+</form>
 {% else %}
 <form action="{{ url_for('upvote_idea', idea_id=idea._id) }}" method="POST">
-    <input type="hidden" name="username" id="idea_author" class="materialize-textarea" value="{{session['username']}}">
+    
     <div class="row">
         <button class="btn waves-effect waves-light" type="submit" name="action">
             Like this idea!
