--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -46,7 +46,7 @@
       $('select').formSelect();
       $('input#input_text, textarea#textarea1, textarea#textarea2, textarea#textarea3').characterCounter();
       $('form:first *:input[type!=hidden]:first').focus();
-
+      $(".dropdown-trigger").dropdown();
     });
   </script>
 
