--- a/templates/pages/ideas/ideas.html
+++ b/templates/pages/ideas/ideas.html
@@ -1,21 +1,21 @@
 {% extends 'layouts/base.html' %}
 
-{% block headerbutton %}
-<a href="{{url_for('addidea')}}" class="waves-effect waves-light btn">add idea</a>
-{% endblock %}
+
 
 {% block content %}
+{% include 'components/search_cat_tag.html' %}
 <h1>Ideas</h1>
+
 <a href="{{url_for('addidea')}}" class="waves-effect waves-light btn">add idea</a>
 
-<h3>Search ideas</h3>
+<!-- <h3>Search ideas</h3>
 <form>
   <div class="input-field z-depth-1">
     <input id="search" type="search" required>
     <label class="label-icon" for="search"><i class="material-icons">search</i></label>
     <i class="material-icons">close</i>
   </div>
-</form>
+</form> -->
 
 
 <div class="row my-grid">
@@ -42,7 +42,10 @@
   {% endfor %}
 </div>
 
-
+Waar is dit?
+{% for cat in categories %}
+<li><a href="#!">{{cat.category_name}}</a></li>
+{% endfor %}
 
 
 
