--- a/templates/pages/ideas/idea_details.html
+++ b/templates/pages/ideas/idea_details.html
@@ -18,13 +18,8 @@
 <div class="chip">
     {{idea.idea_tag3}}
 </div>
-
-
-
-
-
-
-
+{{filename}}
+<img src="{{ url_for('file', filename=idea.image_name) }}">
 <div class="likes">
     <a href="#"><img src="/static/images/thumb_up-black-18dp.svg" alt="thumb up"></a>
     <p>Number of likes: {% if idea.total_votes > 0 %}
@@ -32,6 +27,8 @@
         {% endif %}
     </p>
 </div>
+
+filename=minifigure.photo
 
 <div>
     {% if (idea.username == session["username"]) or (session["username"] == "Master") %}
@@ -43,16 +40,16 @@
 <p>Voted users:{{idea.user_votes}}</p>
 {% set ns = namespace(found=false) %}
 {% for user_vote in idea.user_votes %}
-    {% if session["username"] == user_vote %}
-    {% set cannotVoteAgain=true %}
-    {% set ns.found = true %}
-    {% endif %}
+{% if session["username"] == user_vote %}
+{% set cannotVoteAgain=true %}
+{% set ns.found = true %}
+{% endif %}
 {{cannotVoteAgain}}
 {% endfor %}
 {{ns.found}}
 {% if ns.found == true %}
 <form action="{{ url_for('downvote_idea', idea_id=idea._id) }}" method="POST">
-    
+
     <div class="row">
         <button class="btn waves-effect waves-light" type="submit" name="action">
             Remove my vote
@@ -63,7 +60,7 @@
 </form>
 {% else %}
 <form action="{{ url_for('upvote_idea', idea_id=idea._id) }}" method="POST">
-    
+
     <div class="row">
         <button class="btn waves-effect waves-light" type="submit" name="action">
             Like this idea!
